--- a/hotProduct.html
+++ b/hotProduct.html
@@ -190,14 +190,14 @@
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".2s"
                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/K2.jpg" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/k2.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".4s"
                 style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/K3.jpg" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/k2.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
