--- a/productCategory4.html
+++ b/productCategory4.html
@@ -192,14 +192,14 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".2s"
                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/K2.jpg" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/k2.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".4s"
                 style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/K3.jpg" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/k3.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
@@ -220,56 +220,56 @@
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".2s"
                 style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/Product04.JPG" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/Product04.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".4s"
                 style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/k2.JPG" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/k2.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".6s"
                 style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/k3.JPG" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/k3.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".8s"
                 style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/Product01.JPG" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/Product01.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".2s"
                 style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/Product03.JPG" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/Product03.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".4s"
                 style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/Product04.JPG" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/Product04.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".6s"
                 style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/k2.JPG" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/k2.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".8s"
                 style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
                 <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
-                      src="./images/k3.JPG" alt="泵吸式可燃气体检测仪"></a></div>
+                      src="./images/k3.jpg" alt="泵吸式可燃气体检测仪"></a></div>
                 <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
